Added 1 new photo.
Added one new photo to the gallery and waiting for more from the client.

--- a/css/home-style.css
+++ b/css/home-style.css
@@ -95,6 +95,10 @@ li {
     margin-right: 30px;
 }
 
+#photo-gallery {
+    text-align: center;
+}
+
 #social {
 	text-align: center;
 	letter-spacing: 0.30em;
