--- a/css/landingpage-style.css
+++ b/css/landingpage-style.css
@@ -13,7 +13,7 @@ a {
 }
 
 body {
-    background-image: url("../images/photos/florida.jpg");
+    background-image: url("../images/photos/Aspire-1.jpg");
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
