Changed nav links order
Per Client request, changed the order of the navigation links order.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -93,7 +93,7 @@ li {
     display: inline-block;
 }
 
-.liGallery, .liAboutme, .liInfo {
+.liGallery, .liAboutme, .liJournal {
     margin-right: 30px;
 }
 
@@ -218,7 +218,7 @@ p {
         padding-left: 20px;
     }
 
-    .liGallery, .liAboutme, .liInfo {
+    .liGallery, .liAboutme, .liJournal {
     margin-right: 15px;
     }
 
